--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^0.15.0",
     "mocha": "^5.2.0",
