--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mocha": "^5.2.0",
     "objection": "^1.1.10",
     "sqlite3": "^4.0.1"
+  },
+  "dependencies": {
+    "base64url": "^3.0.0"
   }
 }
