--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^0.15.0",
+    "lodash": "^4.17.10",
     "mocha": "^5.2.0",
     "objection": "^1.1.10",
     "sqlite3": "^4.0.1"
