--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^0.15.0",
-    "lodash": "^4.17.10",
     "mocha": "^5.2.0",
     "objection": "^0.9.6",
     "pg": "^7.4.3",
     "sqlite3": "^4.0.1"
   },
   "dependencies": {
-    "base64url": "^3.0.0"
+    "base64url": "^3.0.0",
+    "lodash": "^4.17.10"
   },
   "keywords": [
     "objection",
