--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "base64url": "^3.0.0",
     "lodash": "^4.17.10"
   },
+  "peerDependencies": {
+    "objection": ">=0.8.3"
+  },
   "keywords": [
     "objection",
     "plugin",
