--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^0.15.0",
     "mocha": "^5.2.0",
-    "objection": "^0.9.6",
+    "objection": "^0.9.4",
     "pg": "^7.4.3",
     "sqlite3": "^4.0.1"
   },
   "dependencies": {
     "base64url": "^3.0.0",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1"
   },
   "peerDependencies": {
     "objection": ">=0.8"
