--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "lint": "eslint --fix \"index.js\" \"serialize.js\" \"test/**/*.js\"",
-    "release": "standard-version"
+    "release": "standard-version",
+    "prerelease": "standard-version --prerelease alpha"
   },
   "engines": {
     "node": ">=6.0.0"
