feat: ts rewrite with objection v2 support and typings

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "objection-cursor",
   "version": "1.0.0",
   "description": "Cursor based pagination plugin for Objection.js",
-  "main": "index.js",
+  "main": "dist/index",
+  "typings": "dist/index",
   "scripts": {
-    "test": "mocha",
-    "lint": "eslint --fix \"index.js\" \"serialize.js\" \"test/**/*.js\"",
+    "test": "npm run mocha test/*.ts",
+    "mocha": "mocha -r ts-node/register",
+    "lint": "tslint --project tsconfig.json",
+    "prebuild": "rimraf dist && npm run lint",
+    "build": "tsc",
     "release": "standard-version",
     "prerelease": "standard-version --prerelease alpha"
   },
@@ -20,14 +24,23 @@
   "author": "Olavi Mustanoja <tilastokeskus@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.7",
+    "@types/lodash": "^4.14.149",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^13.1.4",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
-    "knex": "^0.15.0",
+    "knex": "^0.20.7",
     "mocha": "^5.2.0",
-    "objection": "^0.9.4",
+    "objection": "^2.0.0",
     "pg": "^7.4.3",
-    "sqlite3": "^4.0.1"
+    "rimraf": "^3.0.0",
+    "sqlite3": "^4.0.1",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "tslint-no-unused-expression-chai": "^0.1.4",
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "base64url": "^3.0.0",
