--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objection-cursor",
-  "version": "1.0.1",
+  "version": "1.0.2-alpha.0",
   "description": "Cursor based pagination plugin for Objection.js",
   "main": "index.js",
   "scripts": {
