--- a/.tav.yml
+++ b/.tav.yml
@@ -1,5 +1,12 @@
-objection:
-  versions: 0.9.4 || 1.6.11 || ^2.1.0
+objection-v2:
+  name: objection
+  versions: ">=2.1.0"
+  commands: mocha
+  peerDependencies:
+    - lodash
+objection-previous:
+  name: objection
+  versions: 0.9.1 || 0.9.4 || 1.6.11
   commands: mocha
   peerDependencies:
     - lodash
