--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Cursor based pagination plugin for Objection.js",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --require @babel/register",
     "test:tav": "tav",
-    "lint": "eslint --fix \"index.js\" \"serialize.js\" \"test/**/*.js\"",
+    "lint": "eslint --fix \"index.js\" \"lib/**/*.js\" \"test/**/*.js\"",
     "release": "standard-version",
     "release:alpha": "standard-version --prerelease alpha"
   },
@@ -21,15 +21,19 @@
   "author": "Olavi Mustanoja <tilastokeskus@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^0.15.0",
     "mocha": "^5.2.0",
+    "mysql": "^2.17.1",
     "objection": "^2.0.0",
     "pg": "^7.4.3",
     "sqlite3": "^4.0.1",
-    "mysql": "^2.17.1",
     "test-all-versions": "^4.1.1"
   },
   "dependencies": {
