--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
 	],
 	"rules": {
 		"mocha/no-exclusive-tests": "error",
-		"no-console": "error"
+		"no-console": "error",
+		"no-unused-vars": ["error", {"vars": "all", "args": "all", "ignoreRestSiblings": false, "argsIgnorePattern": "^_"}],
+		"semi": ["error", "always"]
 	}
 }
