--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require @babel/register",
+    "test:sqlite": "CLIENT=sqlite3 mocha --require @babel/register",
     "test:pg": "CLIENT=pg mocha --require @babel/register",
     "test:tav": "tav",
     "lint": "eslint --fix \"index.js\" \"lib/**/*.js\" \"test/**/*.js\"",
@@ -29,12 +30,12 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.0.0",
-    "knex": "^0.15.0",
+    "knex": "^2",
     "mocha": "^5.2.0",
     "mysql": "^2.17.1",
-    "objection": "^2.0.0",
-    "pg": "^7.4.3",
-    "sqlite3": "^4.0.1",
+    "objection": "^3",
+    "pg": "^8.7.3",
+    "sqlite3": "^5.0.0",
     "test-all-versions": "^4.1.1"
   },
   "dependencies": {
