--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-mocha": "^5.0.0",
     "knex": "^2",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "objection": "^3",
     "pg": "^8.7.3",
@@ -40,8 +41,7 @@
   },
   "dependencies": {
     "base64url": "^3.0.0",
-    "lodash": "^4.17.10",
-    "moment": "^2.24.0"
+    "lodash": "^4.17.10"
   },
   "peerDependencies": {
     "objection": ">=0.9.1"
